spacing fix section

--- a/themes/kross-hugo/assets/css/style.css
+++ b/themes/kross-hugo/assets/css/style.css
@@ -249,7 +249,7 @@ a:hover {
 
 .section {
   padding-top: 130px;
-  margin-top: -50px;
+  margin-top: -100px;
   padding-bottom: 80px
 }
 
@@ -741,7 +741,7 @@ textarea.form-control {
 }
 
 .footer-section {
-  padding-top: 200px
+  padding-top: 50px
 }
 
 .section-on-footer {
